# uberbot

./: .gitignore  .gitmodules  Cargo.toml  README.md  sample_uberbot.toml
.cargo/: config.toml
src/: bot.rs  config.rs  database.rs  history.rs  main.rs  regex_util.rs  util.rs  waifu.rs  web.rs  web_service.rs
src/bots/: git.rs  leek.rs  misc.rs  mod.rs  sed.rs  title.rs  weeb.rs
src/commands/: debug.rs  eval.rs  help.rs  leek.rs  mod.rs  playground.rs  quotes.rs  sed.rs  spotify.rs  title.rs  waifu.rs
src/commands/playground/: util.rs
src/res/: quote_tmpl.hbs  quote_tmpl.html
src/web/: mod.rs  parser.rs
templates/: quotes.html
