[package]
name = "uberbot"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1.15", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
fancy-regex = "0.7"
rspotify = { version = "0.11", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
htmlescape = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
arrayvec = "0.7"
rand = "0.8"
meval = "0.2"
lazy_static = "1.4"
sedregex = "0.2"
rusqlite = { version = "0.26", features = ["bundled"] }
warp = "0.3"
futures-util = "0.3"
irc = { version = "0.15", default-features = false }
handlebars = "4.2"

[features]
tls = ["irc/tls-rust"]
