[package]
name = "uberbot"
version = "0.4.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
fancy-regex = "0.10"
# change rspotify back to crates.io when https://github.com/ramsayleung/rspotify/pull/321 hits release code
rspotify = { git = "https://github.com/ramsayleung/rspotify", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
htmlescape = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
arrayvec = "0.7"
rand = "0.8"
meval = "0.2"
rusqlite = { version = "0.28", features = ["bundled"] }
futures-util = "0.3"
irc = { version = "0.15", default-features = false, features = ["tls-rust"] }
async-trait = "0.1"
regex = "1.6.0"
hyper = { version = "0.14", features = ["server"] }
ellipse = "0.2.0"
base64 = "0.13"

[features]
# debug IRC commands
debug = []
